[package]
name = "loom-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "1", features = ["net", "os-ext"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
nix = { version = "0.29", features = ["fs", "socket", "uio", "signal"] }
loom-core = { path = "../loom-core" }
