[package]
name = "loom-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "1", features = ["net", "os-ext"] }
nix = { version = "0.29", features = ["fs", "socket", "signal"] }
loom-core = { path = "../loom-core" }
loom-input = { path = "../loom-input" }
loom-ipc = { path = "../loom-ipc" }
